--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2008124487-R6vwWZ72'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
