--- a/index.html
+++ b/index.html
@@ -1042,6 +1042,7 @@
             </div>
             <div class="info-text">▼メニューをお選びください▼</div>
             <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this)" data-category="ボディメニュー" data-price="15000">デトックスオイルリンパケア120分</button>
                 <button type="button" onclick="selectSymptom(this)" data-category="ボディメニュー" data-price="15000">エナジードレナージュケア30分<br>（気になる箇所2部位）</button>
                 <button type="button" onclick="selectSymptom(this)" data-category="ボディメニュー" data-price="15000">エナジードレナージュケア60分</button>
                 <button type="button" onclick="selectSymptom(this)" data-category="ボディメニュー" data-price="15000">デトックスオイルリンパケア60分</button>
@@ -1063,6 +1064,7 @@
             </div>
             <div class="info-text">▼メニューをお選びください▼</div>
             <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this)" data-category="セットメニュー" data-price="15000">デトックスオイルリンパケア<br>×<br>フェイシャル120分</button>
                 <button type="button" onclick="selectSymptom(this)" data-category="セットメニュー" data-price="15000">エナジードレナージュボディ全身<br>×<br>フェイシャル80分</button>
                 <button type="button" onclick="selectSymptom(this)" data-category="セットメニュー" data-price="15000">デトックスオイルリンパケア60分<br>×<br>光フォトフェイシャル45分</button>
             </div>
@@ -1178,6 +1180,8 @@
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
+            'デトックスオイルリンパケア120分': 150,
+            'デトックスオイルリンパケア×フェイシャル120分': 150,
             '光フォトフェイシャル45分': 75,
             '肌育フェイシャル45分': 75,
             'エナジードレナージュフェイシャル60分': 90,
